# cypher

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: verify_image.py
docs/: container.md  design.md  handoff.md  milestone-1.md  milestone-2.md  milestone-3.md  usage.md
examples/: bakery.py
src/cypher/: __init__.py  __main__.py  _imports.py  archetype.py  catalog.py  cli.py  core.py  discovery.py  errors.py  execution.py  xml.py
tests/: conftest.py  test_archetype.py  test_catalog.py  test_control_api.py  test_discovery.py  test_execution.py  test_help_format.py  test_integration.py  test_package.py  test_simulation.py
tests/fixtures/: bakery.xml
