[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "cyclus-cypher"
version = "0.1.0"
description = "A Python front-end for authoring Cyclus simulation inputs."
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    { name = "Dean Krueger" },
]
keywords = ["cyclus", "nuclear", "fuel-cycle", "simulation", "xml"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8",
    "ruff>=0.11",
    "twine>=6",
]

[project.urls]
Homepage = "https://github.com/dean-krueger/cypher"
Repository = "https://github.com/dean-krueger/cypher"
Issues = "https://github.com/dean-krueger/cypher/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

